Bug 58552 - [Bisected]Xinit fails
Summary: [Bisected]Xinit fails
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-20 02:18 UTC by lu hua
Modified: 2012-12-24 02:50 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (6.89 KB, text/plain)
2012-12-20 02:18 UTC, lu hua
no flags Details

Description lu hua 2012-12-20 02:18:45 UTC
Created attachment 71837 [details]
Xorg.0.log

System Environment:
--------------------------
Arch:        x86_64     
Platform:    Ivybridge
Libdrm:	(master)libdrm-2.4.40-3-g0980633afd9c7eecc0c75ef3bea4d3c6b7aa1898
Mesa:	(master)d8287bac1fd4a77abc2db38de134f14176740d23
Xserver:(master)xorg-server-1.13.0-207-g3420a7778c7d5eaa638327f31dd460554c257bb1
Xf86_video_intel:(master)2.20.16-28-gbfd96b092db5e4e0fc2446752deafd1156cf37b3
Cairo:	(master)5d21c9e224617110678a5b854a6a41049a02fca2
Libva:	(staging)b8d3cf092c9b07cfd909552a3c160b7db3b5a91d
Libva_intel_driver:(staging)a6dfb8f7fb601f102b414ac0c9088b5b8e88060f
Kernel:	(drm-intel-nightly) 44a679d18424b218190ef8b505cced30e4605cb5

Bug detailed description:
------------------------- 
xinit fails.

Bisect shows: 79cb6304e983514dd754065e65e2381a903f9bd6 is the first bad commit.
commit 79cb6304e983514dd754065e65e2381a903f9bd6
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Tue Dec 18 13:49:59 2012 +0000
Commit:     Chris Wilson <chris@chris-wilson.co.uk>
CommitDate: Tue Dec 18 14:09:03 2012 +0000

    sna/xvmc: Clean up to avoid crash'n'burn


output:
Initializing built-in extension DRI2
Loading extension GLX

Fatal server error:
no screens found
(EE)
Please consult the The X.Org Foundation support
         at http://wiki.x.org
 for help.
(EE) Please also check the log file at "/opt/X11R7/var/log/Xorg.0.log" for additional information.
(EE)
Server terminated with error (1). Closing log file.
xinit: giving up
xinit: unable to connect to X server: Connection refused
xinit: server error


Reproduce steps:
----------------
1. xinit
Comment 1 Chris Wilson 2012-12-20 10:15:01 UTC
commit f91a24fdba517c8e9df5a074db2c789fbf066bb3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Dec 20 09:46:32 2012 +0000

    sna/video: Remove XvMCScreenInitProc
    
    The symbols disappears without warning in xorg-1.14
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=58552
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 lu hua 2012-12-24 02:50:40 UTC
Verified. Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.