sna/video: Remove XvMCScreenInitProc

The symbols disappears without warning in xorg-1.14

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=58552
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>